<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#96EBF0"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_entity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:shadowColor="#131F1B"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="15"
            android:text="@string/entity"
            android:textColor="#AC92FA"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_marking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:shadowColor="#131F1B"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="15"
            android:text="@string/marking"
            android:textColor="#AC92FA"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:gravity="end"
            android:shadowColor="#131F1B"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="15"
            android:text="@string/version"
            android:textColor="#AC92FA"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="top|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/menu_btn_control"
            android:padding="6dp"
            android:text="@string/select_text"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_btn_control"
            android:text="@string/start"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/menu_btn_control"
            android:padding="6dp"
            android:text="@string/select_default"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>


